--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap"
     rel="stylesheet">
+    
 
   <!-- Link tag for font awesome  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -63,6 +64,7 @@
     <section class="tweet">
       <h2>Compose Tweet</h2>
       <form method="post" action="/tweets/">
+
         <div class="tweet-header">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
@@ -72,5 +74,31 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
+    
+    </section>
+    <section id="tweet-container">
+      <article class="tweet">
+        <header> 
+          <div class ="image">
+            <img src="https://i.imgur.com/73hZDYK.png" alt="avatar">
+            <p> Nawaalay </p>
+
+          </div>
+          <p>@Nawaalay</p>
+        </header>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, minus!
+        </p>
+        <hr/>
+        <footer >
+          <p class ="date"> 10 days ago</p>
+          <div >
+          <i class="fa-solid fa-flag"></i>
+          <i class="fa-solid fa-retweet"></i>
+          <i class="fa-sharp fa-solid fa-heart"></i>
+        </div>
+        </footer >
+         </article>
     </section>
   </main>
+  
