--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <main class="container">
     <section class="tweet">
       <h2>Compose Tweet</h2>
-      <form method="post" action="/tweets/">
+      <form id='my-form' method="post" action="/tweets/">
 
         <div class="tweet-header">
           <label for="tweet-text">What are you humming about?</label>
@@ -77,27 +77,6 @@
     
     </section>
     <section id="tweet-container">
-      <article class="tweet">
-        <header> 
-          <div class ="image">
-            <img src="https://i.imgur.com/73hZDYK.png" alt="avatar">
-            <p> Nawaalay </p>
-          </div>
-          <p>@Nawaalay</p>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, minus!
-        </p>
-        <hr/>
-        <footer >
-          <p class ="date"> 10 days ago</p>
-          <div>
-          <i class="fa-solid fa-flag"></i>
-          <i class="fa-solid fa-retweet"></i>
-          <i class="fa-sharp fa-solid fa-heart"></i>
-        </div>
-        </footer >
-         </article>
     </section>
   </main>
   
