use jquery to handle errors and show apprpriate error messages

--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,8 @@
   <main class="container">
     <section class="tweet">
       <h2>Compose Tweet</h2>
+      <div id="errorMessage"> </div>
+      <div id="wrongCount"> </div>
       <form id='my-form' method="post" action="/tweets/">
 
         <div class="tweet-header">
