add screenshots of the app

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       <div>
        <b>Write</b> a new tweet
       </div>
-      <i class="fa-solid fa-angles-down"></i>
+      <i class="fa-solid fa-angles-down arrowDown" ></i>
     </span>
   </nav>
 
